Font helper changed

--- a/app/assets/stylesheets/bootstrap-material-design-sass/_variables.scss
+++ b/app/assets/stylesheets/bootstrap-material-design-sass/_variables.scss
@@ -1,5 +1,5 @@
 // material icons path
-$material-font-path: "../fonts" !default;
+$material-font-path: "../fonts/bootstrap-material-design-sass" !default;
 
 // Material colors palette
 $red: #F44336 !default;
