--- a/app/assets/stylesheets/bootstrap-material-design-sass/_icons-material-design.scss
+++ b/app/assets/stylesheets/bootstrap-material-design-sass/_icons-material-design.scss
@@ -1,10 +1,11 @@
 @font-face {
     font-family: "Material-Design-Icons";
-    src:url("#{$material-font-path}/Material-Design-Icons.eot?-g7cqhn");
-    src:url("#{$material-font-path}/Material-Design-Icons.eot?#iefix-g7cqhn") format("embedded-opentype"),
-        url("#{$material-font-path}/Material-Design-Icons.woff?-g7cqhn") format("woff"),
-        url("#{$material-font-path}/Material-Design-Icons.ttf?-g7cqhn") format("truetype"),
-        url("#{$material-font-path}/Material-Design-Icons.svg?-g7cqhn#Material-Design-Icons") format("svg");
+    src:font-path("bootstrap-material-design-sass/Material-Design-Icons.eot?-g7cqhn");
+    src:font-path("bootstrap-material-design-sass/Material-Design-Icons.eot?#iefix-g7cqhn") format("embedded-opentype"),
+        font-path("bootstrap-material-design-sass/Material-Design-Icons.woff?-g7cqhn") format("woff"),
+        font-path("bootstrap-material-design-sass/Material-Design-Icons.ttf?-g7cqhn") format("truetype"),
+        font-path("bootstrap-material-design-sass/Material-Design-Icons.svg?-g7cqhn#Material-Design-Icons") format("svg");
+
     font-weight: normal;
     font-style: normal;
 }
